[package]
name = "arrow-flight-sql-client"
version = "0.1.0"
edition = "2021"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
description = "An Apache Arrow Flight SQL client"
readme = "README.md"
repository = "https://github.com/timvw/arrow-flight-sql-client"
license = "Apache-2.0"
keywords = ["arrow", "flight-sql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "24", features = ["prettyprint"] }
tonic = "0.8"
clap = { version = "3.2", features = ["derive", "cargo"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread"] }
prost = "0.11"
prost-types = { version = "0.11" }
prost-derive = "0.11"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = "1"
tracing = "0.1"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.18", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.11", features = ["tokio"] }
opentelemetry-semantic-conventions = "0.10"

[build-dependencies]
tonic-build = "0.8"
